feat: add skeleton

--- a/index.html
+++ b/index.html
@@ -7,6 +7,44 @@
    <title>Online-store</title>
 </head>
 <body>
-   <h1>online-store</h1>
+   <div class="container">
+      <header class="header">
+         <div class="navigation">
+            <div class="navigation__item">
+               <img src="#" alt="Online-store logo">
+               <p></p>
+            </div>
+            <div class="navigation__item">
+               <p></p>
+            </div>
+            <div class="navigation__item">
+               <img src="#" alt="basket">
+               <p></p>
+            </div>
+         </div>
+      </header>
+
+      <main class="main">
+         <section class="filters">
+
+         </section>
+         <section class="products">
+
+         </section>
+      </main>
+      <footer class="footer">
+         <div class="box">
+            <div class="box__item">
+               <img src="#" alt="Github logo">
+            </div>
+            <div class="box__item">
+               <p></p>
+            </div>
+            <div class="box__item">
+               <img src="#" alt="rsschool logo">
+            </div>
+         </div>
+      </footer>
+   </div>
 </body>
 </html>
