--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="./styles/style.css">
    <title>Online-store</title>
 </head>
 <body>
@@ -11,15 +12,15 @@
       <header class="header">
          <div class="navigation">
             <div class="navigation__item">
-               <img src="#" alt="Online-store logo">
-               <p></p>
+               <img src="./assets/shop.svg" alt="Online-store logo" class="navigation-icons">
+               <p class="inscription">Online Store</p>
             </div>
             <div class="navigation__item">
-               <p></p>
+               <p>Car total:</p>
             </div>
             <div class="navigation__item">
-               <img src="#" alt="basket">
-               <p></p>
+               <img src="./assets/shopping-cart.svg" alt="basket" class="navigation-icons">
+               <p>Draft</p>
             </div>
          </div>
       </header>
@@ -35,13 +36,13 @@
       <footer class="footer">
          <div class="box">
             <div class="box__item">
-               <img src="#" alt="Github logo">
+               <img src="./assets/github-logo.svg" alt="Github logo" class="footer-icons">
             </div>
             <div class="box__item">
-               <p></p>
+               <p id="footer-inscription">Online Store 2022</p>
             </div>
             <div class="box__item">
-               <img src="#" alt="rsschool logo">
+               <img src="./assets/rs_school_js.svg" alt="rsschool logo" class="footer-icons">
             </div>
          </div>
       </footer>
