feat: add products

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
          </section>
          <section class="products">
-
+            
          </section>
       </main>
       <footer class="footer">
@@ -47,5 +47,6 @@
          </div>
       </footer>
    </div>
+   <script src="./js/script.js"></script>
 </body>
 </html>
