feat: add class and fetch

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       <header class="header">
          <div class="navigation">
             <div class="navigation__item">
-               <img src="./assets/shop.svg" alt="Online-store logo" class="navigation-icons">
-               <p class="inscription">Online Store</p>
+               <a href="#"><img src="./assets/shop.svg" alt="Online-store logo" class="navigation-icons"></a>
+               <a href="#"><p class="inscription">Online Store</p></a>
             </div>
             <div class="navigation__item">
                <p>Car total:</p>
             </div>
             <div class="navigation__item">
-               <img src="./assets/shopping-cart.svg" alt="basket" class="navigation-icons">
+               <a href="#"><img src="./assets/shopping-cart.svg" alt="basket" class="navigation-icons"></a>
                <p>Draft</p>
             </div>
          </div>
@@ -36,17 +36,18 @@
       <footer class="footer">
          <div class="box">
             <div class="box__item">
-               <img src="./assets/github-logo.svg" alt="Github logo" class="footer-icons">
+               <a href="#"><img src="./assets/github-logo.svg" alt="Github logo" class="footer-icons"></a>
             </div>
             <div class="box__item">
-               <p id="footer-inscription">Online Store 2022</p>
+               <a href="#"><p id="footer-inscription">Online Store 2022</p></a>
             </div>
             <div class="box__item">
-               <img src="./assets/rs_school_js.svg" alt="rsschool logo" class="footer-icons">
+               <a href="#"><img src="./assets/rs_school_js.svg" alt="rsschool logo" class="footer-icons"></a>
             </div>
          </div>
       </footer>
    </div>
+   <script src="./js/fetch.js"></script>
    <script src="./js/script.js"></script>
 </body>
 </html>
