--- a/404.html
+++ b/404.html
@@ -1,10 +1,90 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
   <head>
-    <meta charset='UTF-8'>
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+        name="description"
+        content="Responsive free template 404 for you website"
+    />
+    <meta name="author" content="BootstrapTema" />
+    <link rel="icon" href="favicon.ico" />
+    <title>Page 404 Not found</title>
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
+    />
+    <style>
+        @import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900);
+        body {
+            font-family: Rubik, sans-serif;
+            margin: 0;
+            overflow-x: hidden;
+            font-weight: 300;
+        }
+        #wrapper {
+            width: 100%;
+        }
+        error-box {
+            height: 100%;
+            position: fixed;
+            top: 20%;
+            width: 100%;
+        }
+        .error-box .footer {
+            width: 100%;
+            left: 0;
+            right: 0;
+        }
+        .error-body {
+            padding-top: 5%;
+        }
+        .error-body h1 {
+            font-size: 210px;
+            font-weight: 900;
+            line-height: 210px;
+        }
+        .text-danger {
+            color: #f33155;
+        }
+        .text-muted {
+            color: #8d9ea7;
+        }
+        .m-b-40 {
+            margin-bottom: 40px !important;
+        }
+        .m-t-30 {
+            margin-top: 30px !important;
+        }
+        .m-b-30 {
+            margin-bottom: 30px !important;
+        }
+        @media only screen and (max-width: 520px) {
+            .error-body h1 {
+                font-size: 110px;
+                font-weight: 700;
+                line-height: 110px;
+            }
+        }
+    </style>
   </head>
   <body>
-    УПС
+    <section id="wrapper" class="container-fluid">
+      <div class="error-box">
+        <div class="error-body text-center">
+          <h1 class="text-danger">404</h1>
+          <h3>Page Not Found !</h3>
+          <p class="text-muted m-t-30 m-b-30">
+            MOST LIKELY THE PAGE YOU ARE LOOKING FOR THERE
+          </p>
+          <a href="https://gh-pages--drobyshsv-markuschaaaa.netlify.app/" class="btn btn-danger btn-rounded m-b-40">Back to home</a>
+        </div>
+        <footer class="footer text-center">
+          2023
+          </a>
+        </footer>
+      </div>
+    </section>
   </body>
 </html>
